# Study_web_7

./: README.md  config.ini  pyproject.toml  seed.py  select_1.py  select_10.py  select_2.py  select_3.py  select_4.py  select_5.py  select_6.py  select_7.py  select_8.py  select_9.py
migrations/versions/: acaeb7c68e1d_init.py
