[tool.poetry]
name = "Lekzia_7"
version = "0.1.0"
description = ""
authors = []


[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.23"
faker = "^19.13.0"
psycopg2 = "^2.9.9"
alembic = "^1.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
